# conformal_region_designer

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
conformal_region_designer/: __init__.py  clustering.py  conformity_optimizer.py  core.py  density_estimation.py  kde_shape_finder.py  utils.py
conformal_region_designer/case_studies/car_experiments/: __init__.py  car_env.py  data_generation.py  predictor.py
conformal_region_designer/case_studies/f16/: myLSTM.py  runProcedureOnResiduals.py  train_lstm_stacked_output.py
conformal_region_designer/case_studies/f16/data/pred_future_window_2/: y_test.pkl  y_train.pkl
conformal_region_designer/case_studies/f16/data/testResiduals/: residuals.pkl
conformal_region_designer/case_studies/f16/models/: firstTryLSTMScaler_alt_theta.pkl
conformal_region_designer/shapes/: __init__.py  convexhull.py  ellipse.py  hyperrectangle.py
conformal_region_designer/utils/: __init__.py  conformal.py  time_series.py  viz.py
ellipseCode/: cmaesExMultipleEllipse.py
f16/: myLSTM.py  train_lstm_stacked_output.py
f16/data/: all_data.pkl
f16/data/pred_future_window_2/: x_test.pkl  x_train.pkl
f16/data/stackedOutput/pred_future_window_10/skip_step_1/: x_train.pkl
f16/data/stackedOutput/pred_future_window_10/skip_step_3/: y_train.pkl
f16/data/stackedOutput/pred_future_window_10/skip_step_4/: x_test.pkl  x_train.pkl  y_test.pkl
f16/data/stackedOutput/pred_future_window_10/skip_step_5/: x_test.pkl  x_train.pkl  y_train.pkl
f16/data/stackedOutput/pred_future_window_2/skip_step_1/: x_test.pkl  x_train.pkl
notebooks/: cmaesExMultipleEllipse.py  efficiency_vs_cal1.ipynb  parametric-conformal-convexhull.ipynb  parametric-conformal-ellipse.ipynb  parametric-conformal-manual.ipynb  parametric-conformal-rectangle.ipynb  parametric-conformal.ipynb
notebooks/case-studies/: benchmark_optimized_alphas.npy  car_experiments.ipynb  car_experiments.pkl  car_experiments_multi_step.ipynb  f16_experiments.ipynb  f16_experiments.pkl  figure_gen.ipynb  hurricane_experiments.ipynb
notebooks/synthetic-experiments/: parametric-conformal-convexhull.ipynb  parametric-conformal-ellipse.ipynb  parametric-conformal-rectangle.ipynb
(+29 files in other folders)
