[tool.poetry]
name = "conformal-region-designer"
version = "0.1.0"
description = "Creates intelligently shaped conformal prediction regions that respect multimodality and convexity."
authors = ["Nandan Tumu <nandant@seas.upenn.edu>", "Matthew Cleaveland <mcleav@seas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
gurobipy = "^10.0.3"
cma = "^3.3.0"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.10.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
